# annual_salary_prediction

./: Dockerfile  README.md  README_Vietnamese.txt  WorkNote_Vietnamese.txt  final_train.py  fly.toml  predict.py  pyproject.toml  test.py
data_preparing_and_eda/: data_preparation.ipynb
deploy_model/: final_train.ipynb  predict_test.ipynb  predict_test.py
training_model/: train_decision_tree_regressor.ipynb  train_linear_regression.ipynb  train_random_forest_regressor.ipynb  train_xgboost_regressor.ipynb
