[project]
name = "midterm-project"
version = "0.1.0"
description = "Annual salary prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
